--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "axios": "^0.21.1",
     "eslint": "^7.22.0",
     "global": "^4.4.0",
+    "history": "^5.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-use-location-state": "^2.5.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
